# fds-snowflake-governance-blueprint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml
.claude/skills/: intake-greenfield.md  intake-review.md
docs/: BROWNFIELD_TESTING_PLAN.md  EXPANSION_ENFORCEMENT.md  EXPANSION_OBSERVABILITY.md  GREENFIELD_TESTING_PLAN.md  INTAKE_INTERVIEW_GAPS.md  PHILOSOPHY.md  QUICK_START.md  SPEC.md  brownfield_intake.md  greenfield_intake.md  start_here.md
intake/: connectors.yaml  decisions.md  gap_report.md  tags.yaml  team.yaml
scripts/: AUDIT_SETUP.md  audit.py  audit_setup.sql  audit_teardown.sql  brownfield_inject.sql  brownfield_teardown.sql  generate_tf.py  intake_interview.py  setup_tf_account.sql
terraform/: databases.auto.tfvars.json  main.tf  outputs.tf  provider.tf  rbac.auto.tfvars.json  terraform.tfvars.example  variables.tf  versions.tf  warehouses.auto.tfvars.json
terraform/modules/databases/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/rbac/: connectors.tf  functional_roles.tf  object_roles.tf  outputs.tf  variables.tf
terraform/modules/warehouses/: main.tf  outputs.tf  resource_monitors.tf  variables.tf  versions.tf
tests/unit/: test_audit.py  test_generate_tf.py  test_intake_interview.py
